--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="sandwiches_label">Sandwiches</string>
     <string name="offers_label">Offers</string>
     <string name="cart_label">Cart</string>
+    <string name="sandwiches_list_empty_message">Oooops… We went out of sandwiches!</string>
+    <string name="sandwiches_list_error_message">Oooops… Something went wrong!\nTry again later!</string>
 </resources>
