--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,7 @@
     <string name="generic_list_error_message">Oooops… Something went wrong!\nTry again later!</string>
     <string name="sandwiches_list_empty_message">Oooops… We went out of sandwiches!</string>
     <string name="offers_list_empty_message">No offers for you today</string>
+    <string name="ingredients_label">Ingredients</string>
+    <string name="order_button">Add to cart</string>
+    <string name="details_label">Sandwich details</string>
 </resources>
