--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="ingredients_label">Ingredients</string>
     <string name="order_button">Add to cart</string>
     <string name="details_label">Sandwich details</string>
+    <string name="total_label">Total: %s</string>
 </resources>
