Creating ingredient item layout, creating adapter and presenter to show fake data

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="generic_list_error_message">Oooops… Something went wrong!\nTry again later!</string>
     <string name="sandwiches_list_empty_message">Oooops… We went out of sandwiches!</string>
     <string name="order_item_list_empty_message">Oooops… You need to order something first!</string>
+    <string name="ingredients_list_empty_message">Oooops… We went out of ingredients!</string>
     <string name="offers_list_empty_message">No offers for you today</string>
     <string name="ingredients_label">Ingredients</string>
     <string name="order_button">Add to cart</string>
