--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,5 +12,6 @@
     <string name="order_button">Add to cart</string>
     <string name="details_label">Sandwich details</string>
     <string name="total_label">Total: %s</string>
-    <string name="custom_button">Custom Ingredients</string>
+    <string name="custom_button">Extras</string>
+    <string name="extras_label">Choose your extras</string>
 </resources>
