--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="custom_button">Extras</string>
     <string name="extras_label">Choose your extras</string>
     <string name="done_label">Done</string>
+    <string name="customized_label">%s - Customized by You</string>
 </resources>
